Update metrics using device-level IDs for consistency with October Organic Analysis
- October Organic: 10,949 users (DEVICE_ID from MART_EVENTS)
- August Organic: 4,141 users (APPSFLYER_ID from INT_AF_EVENT)
- August Paid: 21,701 users (APPSFLYER_ID from INT_AF_EVENT)
- Updated all metrics, charts, and insights to reflect corrected data
- Activation rates: Oct 29.42%, Aug Organic 21.18%, Aug Paid 14.33%

--- a/index.html
+++ b/index.html
@@ -373,23 +373,23 @@
                 <h3>📈 October 2025 Organic</h3>
                 <div class="metric-row">
                     <span class="metric-label">Total Users</span>
-                    <span class="metric-value">4,477</span>
+                    <span class="metric-value">10,949</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Activated Users</span>
-                    <span class="metric-value">1,380</span>
+                    <span class="metric-value">3,221</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Activation Rate</span>
-                    <span class="metric-value activation">30.83%</span>
+                    <span class="metric-value activation">29.42%</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Card Activations</span>
-                    <span class="metric-value">995 (22.2%)</span>
+                    <span class="metric-value">2,693 (24.6%)</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Cashload Users</span>
-                    <span class="metric-value">416 (9.3%)</span>
+                    <span class="metric-value">4,416 (40.3%)</span>
                 </div>
             </div>
 
@@ -398,15 +398,15 @@
                 <h3>🌱 August 2025 Organic</h3>
                 <div class="metric-row">
                     <span class="metric-label">Total Users</span>
-                    <span class="metric-value">3,659</span>
+                    <span class="metric-value">4,141</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Activated Users</span>
-                    <span class="metric-value">682</span>
+                    <span class="metric-value">877</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Activation Rate</span>
-                    <span class="metric-value activation">18.64%</span>
+                    <span class="metric-value activation">21.18%</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Card Activations</span>
@@ -414,7 +414,7 @@
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Cashload Users</span>
-                    <span class="metric-value">342 (9.3%)</span>
+                    <span class="metric-value">2,000 (48.3%)</span>
                 </div>
             </div>
 
@@ -423,15 +423,15 @@
                 <h3>💰 August 2025 Paid</h3>
                 <div class="metric-row">
                     <span class="metric-label">Total Users</span>
-                    <span class="metric-value">20,442</span>
+                    <span class="metric-value">21,701</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Activated Users</span>
-                    <span class="metric-value">2,698</span>
+                    <span class="metric-value">3,110</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Activation Rate</span>
-                    <span class="metric-value activation">13.20%</span>
+                    <span class="metric-value activation">14.33%</span>
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Card Activations</span>
@@ -439,7 +439,7 @@
                 </div>
                 <div class="metric-row">
                     <span class="metric-label">Cashload Users</span>
-                    <span class="metric-value">1,756 (8.6%)</span>
+                    <span class="metric-value">9,249 (42.6%)</span>
                 </div>
             </div>
         </div>
@@ -506,57 +506,57 @@
                 <tbody>
                     <tr>
                         <td><strong>Total Users</strong></td>
-                        <td>4,477</td>
-                        <td>3,659</td>
-                        <td><span class="winner">20,442</span></td>
+                        <td>10,949</td>
+                        <td>4,141</td>
+                        <td><span class="winner">21,701</span></td>
                     </tr>
                     <tr>
                         <td><strong>Activation Rate</strong></td>
-                        <td><span class="winner percentage">30.83%</span></td>
-                        <td><span class="percentage">18.64%</span></td>
-                        <td><span class="percentage">13.20%</span></td>
+                        <td><span class="winner percentage">29.42%</span></td>
+                        <td><span class="percentage">21.18%</span></td>
+                        <td><span class="percentage">14.33%</span></td>
                     </tr>
                     <tr>
                         <td><strong>Card Activation Rate</strong></td>
-                        <td><span class="winner percentage">22.23%</span></td>
+                        <td><span class="winner percentage">24.60%</span></td>
                         <td>N/A</td>
                         <td>N/A</td>
                     </tr>
                     <tr>
                         <td><strong>Cashload Rate</strong></td>
-                        <td><span class="percentage">9.29%</span></td>
-                        <td><span class="winner percentage">9.35%</span></td>
-                        <td><span class="percentage">8.59%</span></td>
+                        <td><span class="percentage">40.33%</span></td>
+                        <td><span class="winner percentage">48.30%</span></td>
+                        <td><span class="percentage">42.62%</span></td>
                     </tr>
                     <tr>
                         <td><strong>P2P Send Rate</strong></td>
-                        <td><span class="percentage">5.27%</span></td>
-                        <td><span class="percentage">4.84%</span></td>
-                        <td><span class="percentage">1.92%</span></td>
+                        <td><span class="percentage">5.12%</span></td>
+                        <td><span class="winner percentage">8.57%</span></td>
+                        <td><span class="percentage">3.83%</span></td>
                     </tr>
                     <tr>
                         <td><strong>P2P Request Rate</strong></td>
-                        <td><span class="percentage">1.77%</span></td>
-                        <td><span class="winner percentage">2.27%</span></td>
-                        <td><span class="percentage">0.70%</span></td>
+                        <td><span class="winner percentage">28.12%</span></td>
+                        <td><span class="percentage">26.56%</span></td>
+                        <td><span class="percentage">19.99%</span></td>
                     </tr>
                     <tr>
                         <td><strong>Crossborder Rate</strong></td>
-                        <td><span class="percentage">0%</span></td>
-                        <td><span class="percentage">4.45%</span></td>
-                        <td><span class="percentage">3.18%</span></td>
+                        <td><span class="percentage">21.94%</span></td>
+                        <td><span class="winner percentage">31.63%</span></td>
+                        <td><span class="percentage">24.61%</span></td>
                     </tr>
                     <tr>
                         <td><strong>TopUp Rate</strong></td>
-                        <td><span class="percentage">0.98%</span></td>
-                        <td><span class="percentage">0.71%</span></td>
-                        <td><span class="percentage">0.50%</span></td>
+                        <td><span class="winner percentage">65.08%</span></td>
+                        <td><span class="percentage">37.09%</span></td>
+                        <td><span class="percentage">35.68%</span></td>
                     </tr>
                     <tr>
                         <td><strong>BambuPay Adoption</strong></td>
-                        <td><span class="winner percentage">34.82%</span></td>
-                        <td><span class="percentage">32.20%</span></td>
-                        <td><span class="percentage">29.62%</span></td>
+                        <td><span class="winner percentage">75.82%</span></td>
+                        <td><span class="percentage">41.61%</span></td>
+                        <td><span class="percentage">36.67%</span></td>
                     </tr>
                 </tbody>
             </table>
@@ -570,19 +570,19 @@
         <div class="insights-grid">
             <div class="insight-card">
                 <h3>🏆 October Organic Leads in Quality</h3>
-                <p><strong>30.83% activation rate</strong> represents the highest quality cohort. This is a <strong>65% improvement</strong> over August Organic (18.64%) and <strong>133% better</strong> than Paid users (13.20%).</p>
+                <p><strong>29.42% activation rate</strong> represents the highest quality cohort. This is a <strong>39% improvement</strong> over August Organic (21.18%) and <strong>105% better</strong> than Paid users (14.33%).</p>
                 <p>Hypothesis: The absence of paid campaigns in October may have resulted in more intentional, higher-quality organic signups from word-of-mouth and brand awareness.</p>
             </div>
 
             <div class="insight-card">
                 <h3>📊 Volume vs. Quality Trade-off</h3>
-                <p>Paid campaigns drive <strong>5.6x more volume</strong> than organic (20,442 vs 3,659 users in August), but at <strong>41% lower activation rate</strong>.</p>
+                <p>Paid campaigns drive <strong>5.2x more volume</strong> than organic (21,701 vs 4,141 users in August), but at <strong>32% lower activation rate</strong>.</p>
                 <p>Cost-per-activated-user is likely much higher for paid campaigns. Organic users who activate deliver better ROI.</p>
             </div>
 
             <div class="insight-card">
                 <h3>💳 Card Activation Drives Success</h3>
-                <p>October Organic shows <strong>22.23% card activation</strong>, which correlates with the 30.83% overall activation rate. Card activation appears to be a strong leading indicator of user engagement.</p>
+                <p>October Organic shows <strong>24.60% card activation</strong>, which correlates with the 29.42% overall activation rate. Card activation appears to be a strong leading indicator of user engagement.</p>
                 <p>Note: Card activation data not available in AppsFlyer (August data).</p>
             </div>
 
@@ -590,27 +590,28 @@
                 <h3>🎯 BambuPay Shows Strong Adoption</h3>
                 <p>BambuPay engagement rates are consistently high across all segments:</p>
                 <ul>
-                    <li><strong>October Organic:</strong> 34.82%</li>
-                    <li><strong>August Organic:</strong> 32.20%</li>
-                    <li><strong>August Paid:</strong> 29.62%</li>
+                    <li><strong>October Organic:</strong> 75.82%</li>
+                    <li><strong>August Organic:</strong> 41.61%</li>
+                    <li><strong>August Paid:</strong> 36.67%</li>
                 </ul>
-                <p>This indicates strong product-market fit for the BambuPay feature.</p>
+                <p>This indicates strong product-market fit for the BambuPay feature, especially among recent October organic users.</p>
             </div>
 
             <div class="insight-card">
-                <h3>💸 Funding Consistency</h3>
-                <p>Cashload rates are remarkably consistent across all segments (8.6-9.4%), suggesting funding behavior is independent of acquisition channel.</p>
-                <p>This baseline ~9% funding rate represents users with strong intent to use the platform.</p>
+                <h3>💸 Strong Funding Engagement</h3>
+                <p>Cashload rates are significantly higher across all segments (40-48%), suggesting strong funding behavior and user intent to actively use the platform.</p>
+                <p>August Organic leads with 48.30%, followed closely by August Paid at 42.62% and October Organic at 40.33%.</p>
             </div>
 
             <div class="insight-card">
-                <h3>🌍 Crossborder Opportunity</h3>
-                <p>Crossborder transactions show <strong>0% adoption in October Organic</strong> (likely a data tracking issue) but decent rates in August:</p>
+                <h3>🌍 Crossborder Shows Solid Adoption</h3>
+                <p>Crossborder transactions show strong adoption across all segments:</p>
                 <ul>
-                    <li><strong>August Organic:</strong> 4.45%</li>
-                    <li><strong>August Paid:</strong> 3.18%</li>
+                    <li><strong>October Organic:</strong> 21.94%</li>
+                    <li><strong>August Organic:</strong> 31.63%</li>
+                    <li><strong>August Paid:</strong> 24.61%</li>
                 </ul>
-                <p>This feature has room for growth with better in-app promotion.</p>
+                <p>This feature shows solid product-market fit with room for further growth.</p>
             </div>
         </div>
 
@@ -719,7 +720,7 @@
                 labels: ['October Organic', 'August Organic', 'August Paid'],
                 datasets: [{
                     label: 'Activation Rate (%)',
-                    data: [30.83, 18.64, 13.20],
+                    data: [29.42, 21.18, 14.33],
                     backgroundColor: [chartColors.octOrganic, chartColors.augOrganic, chartColors.augPaid],
                     borderRadius: 10,
                     borderWidth: 2,
@@ -744,21 +745,21 @@
             data: {
                 datasets: [{
                     label: 'October Organic',
-                    data: [{x: 4477, y: 30.83}],
+                    data: [{x: 10949, y: 29.42}],
                     backgroundColor: chartColors.octOrganic,
                     borderColor: chartColors.octOrganic,
                     pointRadius: 12,
                     pointHoverRadius: 15
                 }, {
                     label: 'August Organic',
-                    data: [{x: 3659, y: 18.64}],
+                    data: [{x: 4141, y: 21.18}],
                     backgroundColor: chartColors.augOrganic,
                     borderColor: chartColors.augOrganic,
                     pointRadius: 12,
                     pointHoverRadius: 15
                 }, {
                     label: 'August Paid',
-                    data: [{x: 20442, y: 13.20}],
+                    data: [{x: 21701, y: 14.33}],
                     backgroundColor: chartColors.augPaid,
                     borderColor: chartColors.augPaid,
                     pointRadius: 12,
@@ -809,17 +810,17 @@
                 labels: ['P2P Send', 'P2P Request'],
                 datasets: [{
                     label: 'Oct Organic',
-                    data: [5.27, 1.77],
+                    data: [5.12, 28.12],
                     backgroundColor: chartColors.octOrganic,
                     borderRadius: 8
                 }, {
                     label: 'Aug Organic',
-                    data: [4.84, 2.27],
+                    data: [8.57, 26.56],
                     backgroundColor: chartColors.augOrganic,
                     borderRadius: 8
                 }, {
                     label: 'Aug Paid',
-                    data: [1.92, 0.70],
+                    data: [3.83, 19.99],
                     backgroundColor: chartColors.augPaid,
                     borderRadius: 8
                 }]
@@ -847,17 +848,17 @@
                 labels: ['Crossborder', 'TopUp'],
                 datasets: [{
                     label: 'Oct Organic',
-                    data: [0, 0.98],
+                    data: [21.94, 65.08],
                     backgroundColor: chartColors.octOrganic,
                     borderRadius: 8
                 }, {
                     label: 'Aug Organic',
-                    data: [4.45, 0.71],
+                    data: [31.63, 37.09],
                     backgroundColor: chartColors.augOrganic,
                     borderRadius: 8
                 }, {
                     label: 'Aug Paid',
-                    data: [3.18, 0.50],
+                    data: [24.61, 35.68],
                     backgroundColor: chartColors.augPaid,
                     borderRadius: 8
                 }]
