Add overall card activation section comparing August vs October 2025 without media source segmentation

--- a/index.html
+++ b/index.html
@@ -528,6 +528,52 @@
             </div>
         </div>
 
+        <!-- Overall Card Activation Analysis -->
+        <div class="section-header">
+            <h2>Overall Card Activation: August vs October 2025</h2>
+            <p>New account creation and card activation rates across all channels (no media source segmentation)</p>
+        </div>
+
+        <div class="comparison-table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Period</th>
+                        <th>Total Accounts Created</th>
+                        <th>Accounts with Activated Card</th>
+                        <th>Activation Rate</th>
+                        <th>Insight</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>August 2025</strong></td>
+                        <td>39,487</td>
+                        <td>34,614</td>
+                        <td><span class="winner">87.66%</span></td>
+                        <td>Higher activation - users had more time since account creation</td>
+                    </tr>
+                    <tr>
+                        <td><strong>October 2025</strong></td>
+                        <td>16,446</td>
+                        <td>13,054</td>
+                        <td>79.37%</td>
+                        <td>Strong activation despite shorter timeframe</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="insight-card" style="margin-top: 2rem;">
+            <h3>Key Observations</h3>
+            <ul>
+                <li><strong>August shows 8.3 percentage points higher activation</strong> (87.66% vs 79.37%) - likely due to more time elapsed since account creation</li>
+                <li><strong>August had 2.4x more account creations</strong> (39K vs 16K) - indicating higher overall growth</li>
+                <li><strong>October's 79% activation is still strong</strong> despite users having only ~1 month vs August's 3+ months</li>
+                <li><strong>Note:</strong> This data comes from Salesforce (MART_ACCOUNT → MART_CARD_GALILEO) and does not include media source attribution</li>
+            </ul>
+        </div>
+
         <!-- Time to Activation -->
         <div class="section-header">
             <h2>Time to First Transaction</h2>
