Remove September data from Bambu Pay section, keep only August vs October comparison

--- a/index.html
+++ b/index.html
@@ -573,13 +573,6 @@
                         <td>$117.30</td>
                     </tr>
                     <tr>
-                        <td><strong>September 2025</strong></td>
-                        <td>10,896</td>
-                        <td>37,592</td>
-                        <td>$4.15M</td>
-                        <td>$110.46</td>
-                    </tr>
-                    <tr>
                         <td><strong>October 2025</strong></td>
                         <td><span class="winner">9,372</span></td>
                         <td><span class="winner">40,437</span></td>
@@ -594,9 +587,9 @@
             <h3>Bambu Pay Insights</h3>
             <ul>
                 <li><strong>Growing adoption:</strong> October had 10% more users than August (9,372 vs 8,504)</li>
-                <li><strong>Transaction volume peaked in October:</strong> $4.79M across 40,437 transactions</li>
-                <li><strong>September saw highest unique user count:</strong> 10,896 users - 28% more than August</li>
-                <li><strong>Consistent transaction sizes:</strong> Average transaction ranges from $110-$118 across all months</li>
+                <li><strong>Transaction volume increased 35%:</strong> From $3.51M in August to $4.79M in October</li>
+                <li><strong>Transaction count surged:</strong> 40,437 transactions in October vs 29,955 in August (35% increase)</li>
+                <li><strong>Consistent transaction sizes:</strong> Average transaction remained stable around $117-$118</li>
                 <li><strong>Note:</strong> Bambu Pay transactions identified as Visa Money Transfer with ASTRA*MyBambu merchant description. Data cannot be segmented by media source due to system limitations</li>
             </ul>
         </div>
